optimize for memory

--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -207,11 +207,31 @@
     "prices_df = prices_df.merge(latest_prices_df_prot_gt0,on=['token','chain','protocol'], how='left')\n",
     "latest_prices_df_prot_gt0 = [] # Free up memory\n",
     "\n",
+    "\n",
+    "# prices_df['latest_price_usd'] = \\\n",
+    "#         prices_df['latest_price_usd_prot'].where(prices_df['latest_price_usd_prot'] > 0, \\\n",
+    "#         prices_df['latest_price_usd_raw'].where(prices_df['latest_price_usd_raw'] > 0, \\\n",
+    "#         prices_df['latest_price_usd_prot_gt0']))\n",
+    "\n",
     "#Select the latest price we want in priority order\n",
-    "prices_df['latest_price_usd'] = \\\n",
-    "        prices_df['latest_price_usd_prot'].where(prices_df['latest_price_usd_prot'] > 0, \\\n",
-    "        prices_df['latest_price_usd_raw'].where(prices_df['latest_price_usd_raw'] > 0, \\\n",
-    "        prices_df['latest_price_usd_prot_gt0']))\n",
+    "\n",
+    "# Chat GPT did this logic\n",
+    "# Define the conditions and choices for the numpy.select() function\n",
+    "conditions = [\n",
+    "    prices_df['latest_price_usd_prot'] > 0,\n",
+    "    prices_df['latest_price_usd_raw'] > 0,\n",
+    "]\n",
+    "choices = [\n",
+    "    prices_df['latest_price_usd_prot'],\n",
+    "    prices_df['latest_price_usd_raw'],\n",
+    "]\n",
+    "\n",
+    "# If both conditions are False, choose prices_df['latest_price_usd_prot_gt0']\n",
+    "default_choice = prices_df['latest_price_usd_prot_gt0']\n",
+    "\n",
+    "# Use numpy.select() to select the latest price\n",
+    "prices_df['latest_price_usd'] = np.select(conditions, choices, default_choice)\n",
+    "\n",
     "\n",
     "#Filter down\n",
     "prices_df = prices_df[['chain','protocol','token','latest_price_usd']]\n",
