--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -192,6 +192,7 @@
     "latest_prices_df_prot = latest_prices_df_prot.reset_index()\n",
     "prices_df = prices_df.merge(latest_prices_df_prot,on=['token','chain','protocol'], how='left')\n",
     "latest_prices_df_raw_prot = [] # Free up memory\n",
+    "print('done latest_prices_df_raw_prot')\n",
     "\n",
     "latest_prices_df_raw = data_df[~data_df['price_usd'].isna()][['token','chain','price_usd']][data_df['token_rank_desc'] ==1]\n",
     "latest_prices_df = latest_prices_df_raw.groupby(['token','chain']).median('price_usd')\n",
@@ -199,6 +200,7 @@
     "latest_prices_df = latest_prices_df.reset_index()\n",
     "prices_df = prices_df.merge(latest_prices_df,on=['token','chain'], how='left')\n",
     "latest_prices_df = [] # Free up memory\n",
+    "print('done latest_prices_df')\n",
     "\n",
     "latest_prices_df_raw_prot_gt0 = data_df[~data_df['price_usd'].isna()][['token','chain','price_usd','protocol']][data_df['token_rank_desc_prot_gt0'] ==1]\n",
     "latest_prices_df_prot_gt0 = latest_prices_df_raw_prot_gt0.groupby(['token','chain','protocol']).median('price_usd')\n",
@@ -206,6 +208,7 @@
     "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.reset_index()\n",
     "prices_df = prices_df.merge(latest_prices_df_prot_gt0,on=['token','chain','protocol'], how='left')\n",
     "latest_prices_df_prot_gt0 = [] # Free up memory\n",
+    "print('done latest_prices_df_prot_gt0')\n",
     "\n",
     "\n",
     "# prices_df['latest_price_usd'] = \\\n",
@@ -231,7 +234,7 @@
     "\n",
     "# Use numpy.select() to select the latest price\n",
     "prices_df['latest_price_usd'] = np.select(conditions, choices, default_choice)\n",
-    "\n",
+    "print(\"done price choice\")\n",
     "\n",
     "#Filter down\n",
     "prices_df = prices_df[['chain','protocol','token','latest_price_usd']]\n",
@@ -240,7 +243,8 @@
     "\n",
     "#Merge back in to the data dataframe\n",
     "data_df = data_df.merge(prices_df,on=['token','chain','protocol'], how='left')\n",
-    "prices_df = [] #Free Up Memory"
+    "prices_df = [] #Free Up Memory\n",
+    "print(\"prices map done\")"
    ]
   },
   {
@@ -251,7 +255,6 @@
    "outputs": [],
    "source": [
     "# Sort in date order\n",
-    "print(\"prices map done\")\n",
     "\n",
     "data_df.sort_values(by='date',inplace=True)\n",
     "\n",
