--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "#merge back in\n",
     "df_df = pd.concat([df_df,df_df_shift])\n",
-    "df_df_shift = [] #free up memory\n",
+    "df_df_shift = None #Free Up memory\n",
     "# print(df_df_all.dtypes)\n",
     "\n",
     "df_df = df_df[df_df['date'] <= pd.to_datetime(\"today\") ]\n",
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "data_df = df_df.copy()\n",
-    "df_df = [] # Free Up Memory\n",
+    "df_df = None # Free up memory\n",
     "data_df = data_df.sort_values(by='date')\n",
     "\n",
     "# price = usd value / num tokens\n",
@@ -177,9 +177,9 @@
     "data_df['token_rank_desc_prot'] = data_df.groupby(['chain','token','protocol'])['date'].\\\n",
     "                            rank(method='dense',ascending=False).astype(int)\n",
     "# Token's recency rank by chain & app if > 0 - For calculating prices\n",
-    "data_df['token_rank_desc_prot_gt0'] = data_df.query('token_value > 0')\\\n",
+    "data_df['token_rank_desc_prot_gt0'] = data_df[data_df['token_value'] > 0]\\\n",
     "                                    .groupby(['chain', 'token', 'protocol'])['date']\\\n",
-    "                                    .rank(method='first', ascending=False)\n",
+    "                                    .rank(method='first', ascending=False).astype(int)\n",
     "\n",
     "# get latest price either by protocol or in aggregate\n",
     "# if we don't have a match by protocol, then select in aggregate.\n",
@@ -192,7 +192,7 @@
     "latest_prices_df_prot = latest_prices_df_prot.rename(columns={'price_usd':'latest_price_usd_prot'})\n",
     "latest_prices_df_prot = latest_prices_df_prot.reset_index()\n",
     "prices_df = prices_df.merge(latest_prices_df_prot,on=['token','chain','protocol'], how='left')\n",
-    "latest_prices_df_raw_prot = [] # Free up memory\n",
+    "latest_prices_df_raw_prot = None # Free up memory\n",
     "print('done latest_prices_df_raw_prot')\n",
     "\n",
     "latest_prices_df_raw = data_df[~data_df['price_usd'].isna()][['token','chain','price_usd']][data_df['token_rank_desc'] ==1]\n",
@@ -200,7 +200,7 @@
     "latest_prices_df = latest_prices_df.rename(columns={'price_usd':'latest_price_usd_raw'})\n",
     "latest_prices_df = latest_prices_df.reset_index()\n",
     "prices_df = prices_df.merge(latest_prices_df,on=['token','chain'], how='left')\n",
-    "latest_prices_df = [] # Free up memory\n",
+    "latest_prices_df = None # Free up memory\n",
     "print('done latest_prices_df')\n",
     "\n",
     "latest_prices_df_raw_prot_gt0 = data_df[~data_df['price_usd'].isna()][['token','chain','price_usd','protocol']][data_df['token_rank_desc_prot_gt0'] ==1]\n",
@@ -208,7 +208,7 @@
     "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.rename(columns={'price_usd':'latest_price_usd_prot_gt0'})\n",
     "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.reset_index()\n",
     "prices_df = prices_df.merge(latest_prices_df_prot_gt0,on=['token','chain','protocol'], how='left')\n",
-    "latest_prices_df_prot_gt0 = [] # Free up memory\n",
+    "latest_prices_df_prot_gt0 = None # Free up memory\n",
     "print('done latest_prices_df_prot_gt0')\n",
     "\n",
     "\n",
@@ -244,7 +244,7 @@
     "\n",
     "#Merge back in to the data dataframe\n",
     "data_df = data_df.merge(prices_df,on=['token','chain','protocol'], how='left')\n",
-    "prices_df = [] #Free Up Memory\n",
+    "prices_df = None #Free Up memory\n",
     "print(\"prices map done\")"
    ]
   },
@@ -295,7 +295,7 @@
     "\n",
     "netdf_df = data_df[['date','protocol','chain','name','category','parent_protocol','net_dollar_flow','usd_value','net_dollar_flow_latest_price']]\n",
     "\n",
-    "data_df = [] #Free Up memory\n",
+    "data_df = None #Free Up memory\n",
     "\n",
     "netdf_df = netdf_df.fillna(0)\n",
     "netdf_df = netdf_df.sort_values(by='date',ascending=True)\n",
