--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -187,7 +187,7 @@
     "prices_df = data_df[['chain','protocol','token']].drop_duplicates()\n",
     "\n",
     "\n",
-    "latest_prices_df_raw_prot = data_df[~data_df['price_usd'].isna()][['token','chain','protocol','price_usd']][data_df['token_rank_desc_prot'] ==1]\n",
+    "latest_prices_df_raw_prot = data_df.loc[~data_df['price_usd'].isna()][['token','chain','protocol','price_usd']][data_df['token_rank_desc_prot'] ==1]\n",
     "latest_prices_df_prot = latest_prices_df_raw_prot.groupby(['token','chain','protocol']).median('price_usd')\n",
     "latest_prices_df_prot = latest_prices_df_prot.rename(columns={'price_usd':'latest_price_usd_prot'})\n",
     "latest_prices_df_prot = latest_prices_df_prot.reset_index()\n",
@@ -195,7 +195,7 @@
     "latest_prices_df_raw_prot = None # Free up memory\n",
     "print('done latest_prices_df_raw_prot')\n",
     "\n",
-    "latest_prices_df_raw = data_df[~data_df['price_usd'].isna()][['token','chain','price_usd']][data_df['token_rank_desc'] ==1]\n",
+    "latest_prices_df_raw = data_df.loc[~data_df['price_usd'].isna()][['token','chain','price_usd']][data_df['token_rank_desc'] ==1]\n",
     "latest_prices_df = latest_prices_df_raw.groupby(['token','chain']).median('price_usd')\n",
     "latest_prices_df = latest_prices_df.rename(columns={'price_usd':'latest_price_usd_raw'})\n",
     "latest_prices_df = latest_prices_df.reset_index()\n",
@@ -203,7 +203,7 @@
     "latest_prices_df = None # Free up memory\n",
     "print('done latest_prices_df')\n",
     "\n",
-    "latest_prices_df_raw_prot_gt0 = data_df[~data_df['price_usd'].isna()][['token','chain','price_usd','protocol']][data_df['token_rank_desc_prot_gt0'] ==1]\n",
+    "latest_prices_df_raw_prot_gt0 = data_df.loc[~data_df['price_usd'].isna()][['token','chain','price_usd','protocol']][data_df['token_rank_desc_prot_gt0'] ==1]\n",
     "latest_prices_df_prot_gt0 = latest_prices_df_raw_prot_gt0.groupby(['token','chain','protocol']).median('price_usd')\n",
     "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.rename(columns={'price_usd':'latest_price_usd_prot_gt0'})\n",
     "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.reset_index()\n",
