--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79aa9678",
+   "id": "78241480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,8 +209,16 @@
     "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.reset_index()\n",
     "prices_df = prices_df.merge(latest_prices_df_prot_gt0,on=['token','chain','protocol'], how='left')\n",
     "latest_prices_df_prot_gt0 = None # Free up memory\n",
-    "print('done latest_prices_df_prot_gt0')\n",
-    "\n",
+    "print('done latest_prices_df_prot_gt0')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79aa9678",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# prices_df['latest_price_usd'] = \\\n",
     "#         prices_df['latest_price_usd_prot'].where(prices_df['latest_price_usd_prot'] > 0, \\\n",
