--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -177,9 +177,9 @@
     "data_df['token_rank_desc_prot'] = data_df.groupby(['chain','token','protocol'])['date'].\\\n",
     "                            rank(method='dense',ascending=False).astype(int)\n",
     "# Token's recency rank by chain & app if > 0 - For calculating prices\n",
-    "data_df['token_rank_desc_prot_gt0'] = data_df[data_df['token_value'] > 0]\\\n",
-    "                                    .groupby(['chain', 'token', 'protocol'])['date']\\\n",
-    "                                    .rank(method='first', ascending=False).astype(int)\n",
+    "# data_df['token_rank_desc_prot_gt0'] = data_df[data_df['token_value'] > 0]\\\n",
+    "#                                     .groupby(['chain', 'token', 'protocol'])['date']\\\n",
+    "#                                     .rank(method='first', ascending=False).astype(int)\n",
     "\n",
     "# get latest price either by protocol or in aggregate\n",
     "# if we don't have a match by protocol, then select in aggregate.\n",
@@ -203,13 +203,14 @@
     "latest_prices_df = None # Free up memory\n",
     "print('done latest_prices_df')\n",
     "\n",
-    "latest_prices_df_raw_prot_gt0 = data_df.loc[~data_df['price_usd'].isna()][['token','chain','price_usd','protocol']][data_df['token_rank_desc_prot_gt0'] ==1]\n",
-    "latest_prices_df_prot_gt0 = latest_prices_df_raw_prot_gt0.groupby(['token','chain','protocol']).median('price_usd')\n",
-    "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.rename(columns={'price_usd':'latest_price_usd_prot_gt0'})\n",
-    "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.reset_index()\n",
-    "prices_df = prices_df.merge(latest_prices_df_prot_gt0,on=['token','chain','protocol'], how='left')\n",
-    "latest_prices_df_prot_gt0 = None # Free up memory\n",
-    "print('done latest_prices_df_prot_gt0')\n"
+    "prices_df['latest_price_usd_prot_gt0'] = 0\n",
+    "# latest_prices_df_raw_prot_gt0 = data_df.loc[~data_df['price_usd'].isna()][['token','chain','price_usd','protocol']][data_df['token_rank_desc_prot_gt0'] ==1]\n",
+    "# latest_prices_df_prot_gt0 = latest_prices_df_raw_prot_gt0.groupby(['token','chain','protocol']).median('price_usd')\n",
+    "# latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.rename(columns={'price_usd':'latest_price_usd_prot_gt0'})\n",
+    "# latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.reset_index()\n",
+    "# prices_df = prices_df.merge(latest_prices_df_prot_gt0,on=['token','chain','protocol'], how='left')\n",
+    "# latest_prices_df_prot_gt0 = None # Free up memory\n",
+    "# print('done latest_prices_df_prot_gt0')\n"
    ]
   },
   {
