--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -729,7 +729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# display(netdf_df[netdf_df['protocol'].str.contains('velodr')])"
+    "# display(netdf_df[netdf_df['protocol'].str.contains('velodr')].sort_values(by='date',ascending=True).iloc[:, :15])"
    ]
   },
   {
@@ -1398,7 +1398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
