add susd hop - synthetix

--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "# Protocol Incentive Start Dates\n",
     "# Eventually, move this to its own file / csv\n",
-    "protocols = pd.read_csv(\"inputs/\" + \"op_incentive_protocols.csv\")\n",
+    "protocols = pd.read_csv(\"inputs/\" + \"op_incentive_protocols_for_tvl.csv\")\n",
     "# evaluate arrays as array\n",
     "protocols[\"contracts\"] = protocols[\"contracts\"].apply(pu.str_to_list)\n",
     "protocols[\"is_external_dex_bridge_pool\"] = protocols[\n",
