--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from airtable import airtable\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"../helper_functions\")\n",
+    "import duneapi_utils as d\n",
+    "sys.path.pop()\n",
     "\n",
     "import dotenv\n",
     "import os\n",
@@ -15,13 +20,13 @@
     "at_api = os.environ[\"AIRTABLE_API_TOKEN\"]\n",
     "at_base = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
-    "columns = ['Name','Block Explorer','Announcement Date', 'Mainnet Launch Date'\n",
+    "columns = ['Name','Alignment','Block Explorer','Announcement Date', 'Mainnet Launch Date'\n",
     "           ,'L1 Standard Bridge Contract', 'L1 NFT Bridge Contract', 'L1 BatchInbox \"to address\"', 'L1 BatchInbox \"from address\"']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,6 +65,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Name</th>\n",
+       "      <th>Alignment</th>\n",
        "      <th>Block Explorer</th>\n",
        "      <th>Announcement Date</th>\n",
        "      <th>Mainnet Launch Date</th>\n",
@@ -73,6 +79,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Aevo</td>\n",
+       "      <td>[RAAS]</td>\n",
        "      <td>https://explorer.aevo.xyz/</td>\n",
        "      <td>2022-09-28</td>\n",
        "      <td>2023-04-07</td>\n",
@@ -86,11 +93,11 @@
        "</div>"
       ],
       "text/plain": [
-       "   Name              Block Explorer Announcement Date Mainnet Launch Date  \\\n",
-       "0  Aevo  https://explorer.aevo.xyz/        2022-09-28          2023-04-07   \n",
+       "   Name Alignment              Block Explorer Announcement Date  \\\n",
+       "0  Aevo    [RAAS]  https://explorer.aevo.xyz/        2022-09-28   \n",
        "\n",
-       "                  L1 Standard Bridge Contract  \\\n",
-       "0  0x4082C9647c098a6493fb499EaE63b5ce3259c574   \n",
+       "  Mainnet Launch Date                 L1 Standard Bridge Contract  \\\n",
+       "0          2023-04-07  0x4082C9647c098a6493fb499EaE63b5ce3259c574   \n",
        "\n",
        "                       L1 NFT Bridge Contract  \\\n",
        "0  0x2e7d7B188D663F38c2E4fF9C59328458A2D676F0   \n",
@@ -111,6 +118,25 @@
     "filtered_df = df[df['L1 Standard Bridge Contract'].notnull() & df['L1 Standard Bridge Contract'].str.startswith('0x')]\n",
     "filtered_df.reset_index(inplace=True, drop=True)\n",
     "display(filtered_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response status code: 200\n",
+      "Response content: b'{\"success\":true}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Post to Dune API\n",
+    "d.write_dune_api_from_pandas(filtered_df, 'op_stack_chain_metadata','Metadata about OP Stack Chains (i.e. bridge contracts, submitter contracts, name)')"
    ]
   }
  ],
