add more filters to op_chain_metadata
Former-commit-id: eaaa8ec28188b3173f3f37488a0e525a1e64f16e

--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,25 +115,17 @@
    ],
    "source": [
     "# Filter the DataFrame\n",
-    "filtered_df = df[df['L1 Standard Bridge Contract'].notnull() & df['L1 Standard Bridge Contract'].str.startswith('0x')]\n",
+    "filtered_df = df[df['L1 Standard Bridge Contract'].notnull() & df['L1 Standard Bridge Contract'].str.startswith('0x')\\\n",
+    "                 & df['L1 BatchInbox \"to address\"'].notnull() & df['L1 BatchInbox \"to address\"'].str.startswith('0x')]\n",
     "filtered_df.reset_index(inplace=True, drop=True)\n",
     "display(filtered_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Response status code: 200\n",
-      "Response content: b'{\"success\":true}'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Post to Dune API\n",
     "d.write_dune_api_from_pandas(filtered_df, 'op_stack_chain_metadata','Metadata about OP Stack Chains (i.e. bridge contracts, submitter contracts, name)')"
