--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -182,6 +182,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "name,alignment,block_explorer,announcement_date,mainnet_launch_date,shutdown_date,l1_standard_bridge_contract,l1_nft_bridge_contract,l1_batchinbox_to_address_,l1_batchinbox_from_address_,l1_output_oracle\n",
+      "OP Mainnet (OVM2),['Forks'],https://optimistic.etherscan.io/,,2021-11-11,,0x99c9fc46f92e8a1c0dec1b1747d010903e884be1,0x5a7749f83b81b301cab5f48eb8516b986daef23d,0x5e4e65926ba27467555eb562121fac00d24e9dd2,0x6887246668a3b87f54deb3b94ba47a6f63f32985,0xbe5dab4a2e9cd0f27300db4ab94bee3a233aeb19\n",
+      "Aevo,['RAAS'],https://explorer.aevo.xyz/,2022-09-28,2023-04-07,,0x4082c9647c098a6493fb499eae63b5ce3259c574,0x2e7d7b188d663f38c2e4ff9c59328458a2d676f0,0x253887577420cb7e7418cd4d50147743c8041b28,0x889e21d7ba3d6dd62e75d4980a4ad1349c61599d,0x909e51211e959339efb14b36f5a50955a8ae3770\n",
+      "OP Mainnet (OVM1),['Forks'],https://optimistic.etherscan.io/,,2021-06-23,2021-11-11,0x99c9fc46f92e8a1c0dec1b1747d010903e884be1,,0x4bf681894abec828b212c906082b444ceb2f6cf6,0x6887246668a3b87f54deb3b94ba47a6f63f32985,0xe969c2724d2448f1d1a6189d3e2aa1f37d5998c1\n",
+      "\n",
       "Response status code: 200\n",
       "Response content: b'{\"success\":true}'\n"
      ]
