--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -7,18 +7,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from airtable import airtable\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"../helper_functions\")\n",
     "import duneapi_utils as d\n",
+    "import airtable_utils as a\n",
     "sys.path.pop()\n",
     "\n",
     "import dotenv\n",
     "import os\n",
     "dotenv.load_dotenv()\n",
-    "at_api = os.environ[\"AIRTABLE_API_TOKEN\"]\n",
-    "at_base = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
+    "\n",
+    "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
     "columns = ['Name','Alignment','Block Explorer','Announcement Date', 'Mainnet Launch Date','Shutdown Date'\n",
     "           ,'L1 Standard Bridge Contract', 'L1 NFT Bridge Contract', 'L1 BatchInbox \"to address\"', 'L1 BatchInbox \"from address\"','L1 Output Oracle']"
@@ -30,11 +30,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "at = airtable.Airtable(at_base, at_api)\n",
-    "data = at.get('OP Products')\n",
-    "df = pd.json_normalize(data, record_path='records')\n",
-    "# Rename all columns that start with 'fields.'\n",
-    "df.rename(columns=lambda x: x.replace('fields.', ''), inplace=True)\n",
+    "# at = airtable.Airtable(at_base, at_api)\n",
+    "# data = at.get('OP Products')\n",
+    "# df = pd.json_normalize(data, record_path='records')\n",
+    "# # Rename all columns that start with 'fields.'\n",
+    "# df.rename(columns=lambda x: x.replace('fields.', ''), inplace=True)\n",
+    "df = a.get_dataframe_from_airtable_database(at_base_id,'OP Products')\n",
     "df = df[columns]"
    ]
   },
@@ -215,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
