--- a/op_rewards_tracking/pull_notion_data.ipynb
+++ b/op_rewards_tracking/pull_notion_data.ipynb
@@ -2,34 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"object\":\"error\",\"status\":401,\"code\":\"unauthorized\",\"message\":\"API token is invalid.\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# WIP Doesn't Work Yet\n",
+    "import notion_client\n",
+    "import sys\n",
+    "sys.path.append(\"../helper_functions\")\n",
+    "import notionapi_utils as n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://oplabs.notion.site/26d856d5ad7c4fda919c62e839cf6051?v=4e38174b2e994129b51dcfa127965aa4\n",
     "\n",
-    "import requests\n",
+    "op_summerdb_id = '26d856d5ad7c4fda919c62e839cf6051'\n",
     "\n",
-    "url = \"\"\n",
-    "\n",
-    "payload = {\"page_size\": 100}\n",
-    "headers = {\n",
-    "    \"accept\": \"application/json\",\n",
-    "    \"Notion-Version\": \"2022-06-28\",\n",
-    "    \"content-type\": \"application/json\"\n",
-    "}\n",
-    "\n",
-    "response = requests.post(url, json=payload, headers=headers)\n",
-    "\n",
-    "print(response.text)"
+    "n.read_notion_database(op_summerdb_id)"
    ]
   }
  ],
@@ -49,7 +42,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
