Update Simple balances
Correcting final query

Former-commit-id: a49137f7e6a52be3c29806768e959f19c4df9a40

--- a/Simple balance tracking.ipynb
+++ b/Simple balance tracking.ipynb
@@ -8,6 +8,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "import pandas as pd\n",
+    "import time\n",
     "\n",
     "# Set the API endpoint URL\n",
     "url = \"https://api-optimistic.etherscan.io/api\"\n",
@@ -25,11 +27,15 @@
     "    \"module\": \"account\",\n",
     "    \"action\": \"balancemulti\",\n",
     "    \"tag\": \"latest\",\n",
+    "    # Add your key here\n",
     "    \"apikey\": \"\"\n",
     "}\n",
     "\n",
+    "# Initialize an empty pandas DataFrame to store the data\n",
+    "df = pd.DataFrame()\n",
+    "\n",
     "# Send an HTTP GET request for each batch of addresses\n",
-    "for batch in address_batches:\n",
+    "for i, batch in enumerate(address_batches):\n",
     "    # Add the batch of addresses to the query parameters\n",
     "    payload[\"address\"] = \",\".join(batch)\n",
     "    \n",
@@ -45,35 +51,54 @@
     "        if data[\"status\"] == \"1\":\n",
     "            # Print the balances of each account in the batch\n",
     "            for account in data[\"result\"]:\n",
-    "                print(f\"{account['account']}: {account['balance']}\")\n",
+    "                df = df.append(pd.json_normalize(data[\"result\"]))\n",
+    "                time.sleep(1)\n",
     "        else:\n",
     "            print(f\"Error: {data['message']}\")\n",
     "    else:\n",
     "        print(f\"HTTP error {response.status_code}\")\n",
-    "    \n",
-    "    # Print a separator between batches\n",
-    "    print(\"-\" * 40)\n"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ba1a581e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 160 addresses, 112 (70.00%) have a balance greater than 0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the \"balance\" column from wei to ether\n",
+    "df[\"balance\"] = df[\"balance\"].astype(float) / 10**18\n",
+    "\n",
+    "# Create a new column indicating whether the balance is greater than zero\n",
+    "df[\"has_balance\"] = df[\"balance\"] > 0\n",
+    "\n",
+    "# Calculate the percentage of addresses with a balance greater than zero\n",
+    "percentage_positive_balance = df[\"has_balance\"].mean() * 100\n",
+    "\n",
+    "# Print the distribution of addresses with a balance greater than zero\n",
+    "print(f\"Out of {len(df)} addresses, {df['has_balance'].sum()} ({percentage_positive_balance:.2f}%) have a balance greater than 0.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1a581e",
+   "id": "986c900d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Loop through the balances of each account in the batch\n",
-    "for account in data[\"result\"]:\n",
-    "    balance = float(account['balance']) / 10**18  # Convert balance from wei to ETH\n",
-    "    if balance > 0:\n",
-    "        positive_balance_count += 1\n",
-    "\n",
-    "# Calculate the percentage of addresses with a balance > 0\n",
-    "percentage_positive_balance = positive_balance_count / len(addresses) * 100\n",
-    "\n",
-    "# Print the distribution of addresses with a balance > 0\n",
-    "print(f\"Out of {len(addresses)} addresses, {positive_balance_count} ({percentage_positive_balance:.2f}%) have a balance greater than 0.\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
