--- a/developer_tracking/successful_deployers_to_devrel.ipynb
+++ b/developer_tracking/successful_deployers_to_devrel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,25 +26,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-05-11 13:44:48.412\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mduneapi_utils\u001b[0m:\u001b[36mget_dune_data\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mResults available at https://dune.com/queries/2457627\u001b[0m\n",
-      "2023-05-11 13:44:50,404 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:44:55,882 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:01,373 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:06,910 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:12,429 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:17,908 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:23,410 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:28,927 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:34,416 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "2023-05-11 13:45:39,887 INFO dune_client.base_client waiting for query execution 01H05YMRFM1FN8DTM694HN9AQA to complete: ExecutionState.EXECUTING\n",
-      "\u001b[32m2023-05-11 13:45:46.208\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mduneapi_utils\u001b[0m:\u001b[36mget_dune_data\u001b[0m:\u001b[36m48\u001b[0m - \u001b[1m✨ Results saved as csv_outputs/Contract Deployments Usage Threshold - Creator List.csv, with 465 rows and 21 columns.\u001b[0m\n"
+      "\u001b[32m2023-05-12 14:42:27.231\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mduneapi_utils\u001b[0m:\u001b[36mget_dune_data\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mResults available at https://dune.com/queries/2457627\u001b[0m\n",
+      "2023-05-12 14:42:29,612 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:42:35,074 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:42:40,534 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:42:46,032 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:42:51,511 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:42:56,984 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:02,465 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:07,957 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:13,422 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:18,895 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:24,359 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:29,813 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:35,281 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:40,747 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:47,411 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:52,912 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:43:58,377 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:03,859 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:09,338 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:14,811 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:20,268 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:25,737 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:31,201 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:36,620 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:42,038 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:47,505 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:52,958 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:44:58,451 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:05,075 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:10,531 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:16,030 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:21,485 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:26,954 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:32,423 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:37,910 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:43,394 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:48,865 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:54,352 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:45:59,810 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:05,227 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:10,650 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:16,123 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:22,633 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:28,081 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:33,537 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:38,991 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:44,443 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "2023-05-12 14:46:49,904 INFO dune_client.base_client waiting for query execution 01H08MB29PKH7ZQ04XGG5B39D4 to complete: ExecutionState.EXECUTING\n",
+      "\u001b[32m2023-05-12 14:46:56.398\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mduneapi_utils\u001b[0m:\u001b[36mget_dune_data\u001b[0m:\u001b[36m48\u001b[0m - \u001b[1m✨ Results saved as csv_outputs/Contract Deployments Usage Threshold - Creator List.csv, with 829 rows and 23 columns.\u001b[0m\n"
      ]
     }
    ],
@@ -58,31 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Dt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Dt'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#reformat col names\u001b[39;00m\n\u001b[1;32m      2\u001b[0m deployers \u001b[39m=\u001b[39m p\u001b[39m.\u001b[39mcsv_columns_to_formatted(deployers)\n\u001b[0;32m----> 4\u001b[0m datestr \u001b[39m=\u001b[39m p\u001b[39m.\u001b[39mget_datestring_from_datetime(deployers[\u001b[39m'\u001b[39;49m\u001b[39mDt\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m])\n\u001b[1;32m      5\u001b[0m datestr \u001b[39m=\u001b[39m datestr\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m p\u001b[39m.\u001b[39mmkdir_if_not_exists(\u001b[39m'\u001b[39m\u001b[39muploads\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3808\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/new-env/lib/python3.10/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Dt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#reformat col names\n",
     "deployers = p.csv_columns_to_formatted(deployers)\n",
@@ -91,12 +107,12 @@
     "datestr = datestr.replace('-', '_')\n",
     "\n",
     "p.mkdir_if_not_exists('uploads')\n",
-    "deployers.to_csv('uploads/deployer_data_' + datestr + '.csv')"
+    "deployers.to_csv('uploads/deployer_data_' + datestr + '.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
