--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9104321f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ffefb42a",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1015ba20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/michaelsilberling/Documents/GitHub/op-analytics/op_rewards_tracking\n"
+     ]
+    }
+   ],
    "source": [
     "pwd = os.getcwd()\n",
     "# Verify that our path is right\n",
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "94d6ed51",
    "metadata": {},
    "outputs": [],
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "177ccca5",
    "metadata": {},
    "outputs": [],
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cff9db78",
    "metadata": {},
    "outputs": [],
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d3399236",
    "metadata": {},
    "outputs": [],
@@ -244,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b74f70ef",
    "metadata": {},
    "outputs": [],
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2d797655",
    "metadata": {},
    "outputs": [],
@@ -274,10 +282,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8904e656",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "velodrome-0xfc77e39de40e54f820e313039207dc850e4c9e60\n",
+      "curve-0x7bc5728bc2b59b45a58d9a576e2ffc5f0505b35e\n",
+      "curve-0x061b87122ed14b9526a813209c8a59a633257bab\n",
+      "curve-0x7bc5728bc2b59b45a58d9a576e2ffc5f0505b35e\n",
+      "curve-0x061b87122ed14b9526a813209c8a59a633257bab\n"
+     ]
+    }
+   ],
    "source": [
     "# display(df_dfl)\n",
     "dfs_sub = []\n",
@@ -295,13 +315,10 @@
     "            )\n",
     "        # subgraph specific\n",
     "        elif df_source == \"curve\":\n",
-    "            print(df_source + '-' + c.lower())\n",
     "            sdf = subg.get_curve_pool_tvl(c.lower(), min_ts=min_tsmp)\n",
     "        elif df_source == \"velodrome\":\n",
-    "            print(df_source + '-' + c.lower())\n",
     "            sdf = subg.get_velodrome_pool_tvl(c.lower(), min_ts=min_tsmp)\n",
     "        elif df_source == \"hop\":\n",
-    "            print(df_source + '-' + c.lower())\n",
     "            sdf = subg.get_hop_pool_tvl(c, min_ts=min_tsmp)\n",
     "\n",
     "        sdf[\"start_date\"] = program[\"start_date\"]\n",
